# codmar001

./: .gitignore
client/: package.json  test-electron.js  tsconfig.json  tsconfig.main.json  vite.config.ts
client/src/main/: ais-parser.ts  (+9 more)
collettore/: .env.example  .gitignore  Dockerfile  requirements.txt
collettore/config/: config.yml
collettore/src/: main.py
server/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  ws_monitor.py
server/config/: config.yml
server/src/: config_ui_server.py  main.py
server/src/core/: config.py  keycloak_auth.py  logger.py  security.py
server/src/modules/admin/: __init__.py  admin_api.py  audit_logger.py  token_manager.py
server/src/modules/admin/static/: admin.html
server/src/modules/ais_parser/: __init__.py  nmea_parser.py
server/src/modules/config_ui/: __init__.py  config_api.py
server/src/modules/config_ui/static/: config-ui.html  config-ui.js  dashboard.html  dashboard.js
server/src/modules/database/: __init__.py  database_manager.py
server/src/modules/stream_ingestion/: __init__.py  satellite_client.py
server/src/modules/watchlist/: __init__.py  api_client.py  watchlist_manager.py
server/src/modules/websocket/: __init__.py  websocket_server.py
shared/types/: index.ts
vessel_lists/: .env.example  Dockerfile  ais_router.py  ais_websocket.py  analytics.py  config.py  database.py  documents.py  main.py  models.py  requirements.txt  schemas.py  security.py
vessel_lists/frontend/: index.html  quick_add_modal.html  vite.config.js
vessel_lists/static/: index.html
(+45 files in other folders)
